--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,11 @@ dependencies {
 	implementation 'org.jsoup:jsoup:1.17.2'
 
 	// xlsx parser library
-	implementation 'org.apache.poi:poi:5.2.2'
 	implementation 'org.apache.poi:poi-ooxml:5.2.2'
+
+
+	// swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
 	runtimeOnly 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok'
